--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </ul>
         </li>
       </ul>
-      <button>닫기</button>
+      <button class="ham_close">닫기</button>
     </div>
     <header class="hd">
       <div class="eventban">
@@ -108,7 +108,7 @@
           </div>
           <a href="#">회원가입</a>
           <a href="#">로그인</a>
-          <i class="fa-solid fa-bars on"></i>
+          <i class="fa-solid fa-bars ham_open on"></i>
         </div>
       </nav>
     </header>
